Bug 247612 - KNotes has (send) "To Desktop" greyed out
Summary: KNotes has (send) "To Desktop" greyed out
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9.15
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 209936 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-13 08:46 UTC by Alexander Wigen
Modified: 2013-08-11 20:31 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Wigen 2010-08-13 08:46:44 UTC
Version:           0.9.15 (using KDE 4.5.0) 
OS:                Linux

When right clicking a note's title bar the "To Desktop" submenu is greyed out so I can't send the note to a different desktop.

Compiled from 4.5.0 sources, KNotes Version 3.9.

Reproducible: Always

Steps to Reproduce:
Right click a note's title bar and look for the "To Desktop" submenu

Actual Results:  
The menu entry is greyed out.

Expected Results:  
The menu should contain a list of desktops which the note can be sent to.

OS: Linux (i686) release 2.6.35-gentoo-r1
Compiler: i686-pc-linux-gnu-gcc
Comment 1 leon pollak 2010-11-24 09:55:02 UTC
Confirmed here in 4.5.3 version. Very annoying.
Please, correct! Please!!!
Comment 2 Derek Jackson 2010-12-10 20:57:51 UTC
Confirmed here on KDE 4.4.4 version.  I have 4 desktops setup.
Comment 3 setessentos 2011-08-25 20:21:29 UTC
If you set knote to show in the taskbar you can right click the note in the taskbar to move it to another desktop. 

Not sure why it doesn't work otherwise.
Comment 4 leon pollak 2011-08-25 21:56:05 UTC
Do not understood what you mean. The opened note does not appear in the task manager, only in the system tray.
And there is no way to move the opened note to another desktop it was created.
Very very very uncomfortable.
Comment 5 setessentos 2011-08-25 22:18:56 UTC
You'll need to right click the icon in the system tray, go to configure Knotes. Under the display options check the box which says "Show note in taskbar" hit OK.

Once it is in the taskbar you can right click it there and move it to a desktop.
Comment 6 Alexander Wigen 2012-06-04 03:15:18 UTC
I'm the original poster and can confirm the issue is still present with KDE/KNotes 4.8.3
Comment 7 nandou 2012-07-25 10:27:13 UTC
Yap, same here. This is annoying. Plasma notes keep disappearing and no backup option, knotes has this broken, xpad is not maintained... I don't like tombtoy...

Can someone change this to confirmed?

KDE 4.8.4 on ubuntu 12.04
Comment 8 Chris Wales 2012-11-09 09:59:14 UTC
This is a bad piece of UX - assuming that users even know that they have to edit preferences on an individual note and click "Show Note in Taskbar" to be able to move it, this is still very laborious and mostly, they may not wish to make notes appear in the taskbar alongside other windows.

Can it not just be changed to allow the "To Desktop" to be available even when the note is not in the taskbar?
Comment 9 Chris Wales 2012-11-09 10:00:19 UTC
*** This bug has been confirmed by popular vote. ***
Comment 10 Steve Wickert 2013-07-20 18:20:04 UTC
Bug still present as of 2013-07-20 in knotes-4.10.5. I was able to find this bug description fairly quickly on Google and the workaround ("Show note in taskbar" and right click and move from there) works fine, but having the "To deskop" main menu option greyed out is clearly a bug. Hope this gets fixed sometime soon :-)
Comment 11 Christoph Feck 2013-08-11 13:24:47 UTC
https://git.reviewboard.kde.org/r/112016/
Comment 12 Christoph Feck 2013-08-11 13:52:50 UTC
Git commit 331691b8969555d58cc7fc0d2dd3625ff20f37ed by Christoph Feck.
Committed on 11/08/2013 at 13:51.
Pushed by cfeck into branch 'KDE/4.11'.

Fix disabled "To Desktop" menu
FIXED-IN: 4.11.1
REVIEW: 112016

M  +2    -0    knotes/knote.cpp

http://commits.kde.org/kdepim/331691b8969555d58cc7fc0d2dd3625ff20f37ed
Comment 13 Christoph Feck 2013-08-11 20:31:49 UTC
*** Bug 209936 has been marked as a duplicate of this bug. ***