Fix disabled "To Desktop" menu

BUG: 247612
FIXED-IN: 4.11.1
REVIEW: 112016